# RadioWana

./: .gitignore  CMakeLists.txt  README.md
desktop/: CMakeLists.txt  Makefile  README.md  TODO.md
desktop/assets/: README.md
desktop/assets/shader/: bars.frag  glow.frag  glowAndBars.frag  glowLightning.frag  liquidTerrain.frag  quad.vert  rain.frag  rainGlow.frag
desktop/res/: RadioWana_Setup_script.iss  resources.rc
desktop/src/: AudioHandler.cpp  AudioHandler.h  AudioRecorder.h  BackGroundEffects.h  RadioBrowser.cpp  RadioBrowser.h  RadioWana.cpp  RadioWana.h  StreamHandler.cpp  StreamHandler.h  StreamInfo.h  appMain.h  main.cpp
eval/: CMakeLists.txt  README.md  main.cpp
eval/lib/ohmtal/core/: fluxGlobals.h
eval/lib/ohmtal/dsp/: DSP_EffectFactory.h  DSP_Reverb.h  DSP_ToneControl.h  DSP_VoiceModulator.h  DSP_tools.h
eval/lib/ohmtal/dsp/MonoProcessors/: AutoWah.h  Delay.h  Visualizer.h
eval/lib/ohmtal/gui/ImFlux/: background.h  helper.h  showCase.h  text.h
eval/src/: AudioHandler.cpp  AudioHandler.h  AudioRecorder.h  CurlGlue.h  HttpsClient.h  HttpsStream.h  RadioBrowser.h  StreamHandler.cpp  StreamHandler.h  StreamInfo.h  main.cpp
lib/ohmtal/: BaseFlux.h  ImConsole.h  errorlog.h
lib/ohmtal/core/: fluxGlobals.h
lib/ohmtal/dsp/: DSP.h  DSP_AnalogGlow.h  DSP_AutoWah.h  DSP_ChromaticTuner.h  DSP_Delay.h  DSP_Effect.h  DSP_EffectsManager.h  DSP_Equalizer.h  DSP_Equalizer9Band.h  DSP_Limiter.h  DSP_Math.h  DSP_NoiseGate.h  DSP_OverDrive.h  DSP_RingModulator.h  DSP_SpectrumAnalyzer.h  DSP_Tremolo.h  DSP_Warmth.h
lib/ohmtal/dsp/Drums/: DSP_Cymbals.h  DSP_DrumKit.h  DSP_KickDrum.h  DSP_Snare.h  DrumSynth.h
lib/ohmtal/dsp/MonoProcessors/: Chorus.h  Compressor.h  Octaver.h  Phaser.h  ToneControl.h  Volume.h
lib/ohmtal/dsp/Processors/: Looper.h
lib/ohmtal/gui/: ImFlux.h
lib/ohmtal/gui/ImFlux/: buttons.h  comboAndStepper.h  knobs.h  lcd.h  led.h  music.h  peekAndVU.h  slider.h  window.h
lib/ohmtal/utils/: errorlog.cpp  errorlog.h
prototype/: CMakeLists.txt  README.md
prototype/lib/ohmtal/dsp/: DSP_Bitcrusher.h  DSP_Chorus.h  DSP_DistortionBasic.h  DSP_Metal.h  DSP_VisualAnalyzer.h  README.md
prototype/lib/ohmtal/dsp/Drums/: DSP_HiHat.h  DSP_TomDrum.h
prototype/lib/ohmtal/dsp/MonoProcessors/: Filter.h  Tremolo.h
prototype/lib/ohmtal/dsp/unused/: DSP_SoundCardEmulation.h
prototype/lib/ohmtal/gui/ImFlux/: lcd.h
prototype/src/: AudioHandler.cpp  AudioRecorder.h  CurlGlue.h  RadioBrowser.h  StreamInfo.h  main.cpp
